[package]
name = "stateless-trie-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { version = "1.0.24", default-features = false}
alloy-primitives = { version = "1.3.0", default-features = false}
alloy-eips = {version = "1.0.24", default-features = false}
alloy-trie = {version = "0.9.1", default-features = false}
alloy-rlp = { version = "0.3.12", default-features = false }

reth-evm-ethereum = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f", default-features = false }
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f" }
reth-chainspec = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f", default-features = false }
reth-primitives-traits = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f", default-features = false }
reth-errors = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f", default-features = false }
reth-evm = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f", default-features = false }
reth-trie-common = { git = "https://github.com/kevaundray/reth", rev = "6de1d8358ca2790d47852317c457a9a426a2e09f", default-features = false }
revm-bytecode = { version = "6.2.2", default-features = false }
risc0-ethereum-trie = { git = "https://github.com/risc0/risc0-ethereum.git", rev = "4a5efe13b3655258b89e7082c57743e445133dc8" }
zeth-core = { git = "https://github.com/boundless-xyz/zeth.git", rev = "v0.2.1"}
guest-libs = { git = "https://github.com/eth-act/zkevm-benchmark-workload.git", default-features = false }

criterion = { version = "0.7.0", features = ["html_reports"]}
serde_json = "1.0.145"


[[bench]]
name = "stateless-trie-bench"
harness = false